<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">BirthDayDroid</string>
    <string name="app_desc">Your Birthday Reminder</string>
    <string name="sign_aquarius">Aquarius</string>
    <string name="sign_capricorn">Capricorn</string>
    <string name="sign_pisces">Pisces</string>
    <string name="sign_aries">Aries</string>
    <string name="sign_taurus">Taurus</string>
    <string name="sign_gemini">Gemini</string>
    <string name="sign_cancer">Cancer</string>
    <string name="sign_leo">Leo</string>
    <string name="sign_virgo">Virgo</string>
    <string name="sign_libra">Libra</string>
    <string name="sign_scorpio">Scorpio</string>
    <string name="sign_sagittarius">Sagittarius</string>
    <string name="sign_element_fire">Fire</string>
    <string name="sign_element_earth">Earth</string>
    <string name="sign_element_air">Air</string>
    <string name="sign_element_water">Water</string>

    <string name="sign_aquarius_symbol" translatable="false">♒</string>
    <string name="sign_capricorn_symbol" translatable="false">♑</string>
    <string name="sign_pisces_symbol" translatable="false">♓</string>
    <string name="sign_aries_symbol" translatable="false">♈</string>
    <string name="sign_taurus_symbol" translatable="false">♉</string>
    <string name="sign_gemini_symbol" translatable="false">♊</string>
    <string name="sign_cancer_symbol" translatable="false">♋</string>
    <string name="sign_leo_symbol" translatable="false">♌</string>
    <string name="sign_virgo_symbol" translatable="false">♍</string>
    <string name="sign_libra_symbol" translatable="false">♎</string>
    <string name="sign_scorpio_symbol" translatable="false">♏</string>
    <string name="sign_sagittarius_symbol" translatable="false">♐</string>
    <string name="sign_element_fire_symbol" translatable="false">🔥</string>
    <string name="sign_element_earth_symbol" translatable="false">🌎</string>
    <string name="sign_element_air_symbol" translatable="false">🌬</string>
    <string name="sign_element_water_symbol" translatable="false">💧</string>

    <string name="search">Search for age, name, sign, etc</string>
    <string name="zodiac" translatable="false">%1$s|%2$s</string>
    <string name="birthday_string" translatable="false">%1$s/%2$d</string>

    <plurals name="contact">
        <item quantity="one">%1$d contact</item>
        <item quantity="other">%1$d contacts</item>
    </plurals>
    <plurals name="years_old">
        <item quantity="one">%1$d year old</item>
        <item quantity="other">%1$d years old</item>
    </plurals>

    <plurals name="days_old">
        <item quantity="one">%1$d day old</item>
        <item quantity="other">%1$d days old</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">It was yesterday!</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>

    <plurals name="days_to_go">
        <item quantity="one">It is tomorrow!</item>
        <item quantity="other">%1$d days to go</item>
    </plurals>

    <string name="party_message">There is a party going on today :D</string>

    <plurals name="message_notification_message_bt_to_come">
        <item quantity="one">%1$s turning %2$d tomorrow</item>
        <item quantity="other">%1$s turning %2$d in %3$d days</item>
    </plurals>

    <plurals name="message_notification_message_bt_to_come_no_age">
        <item quantity="one">%1$s\'s birthday is tomorrow</item>
        <item quantity="other">%1$s\'s birthday is in %2$d days</item>
    </plurals>

    <string name="menu_birthday_list">Birthday List</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_statistics_age">Age Statistics</string>
    <string name="menu_statistics_zodiac">Zodiac Statistics</string>
    <string name="menu_statistics_week">Weekday birth Statistics</string>
    <string name="menu_statistics_month">Month birth Statistics</string>
    <string name="menu_about">About</string>
    <string name="settings_not_sound_title">Notification Sound</string>
    <string name="settings_not_sound_sum">Set the birthday notifications\' sound</string>
    <string name="settings_scan_preferences">Birthday Notification Settings</string>
    <string name="settings_scan_not_sum">Show birthday notifications daily</string>
    <string name="settings_scan_not_title">Daily Notifications</string>
    <string name="settings_scan_title">Time for Daily Notifications</string>
    <string name="settings_scan_not_adv_sum">Show birthdays notifications in advance</string>
    <string name="settings_scan_not_adv_title">Birthday Notifications in Advance</string>
    <string name="settings_list_hide_zodiac">Hide Zodiac</string>
    <string name="settings_show_current_age">Show Current Age</string>
    <string name="settings_statistics_as_text">Show Statistics as text</string>
    <string name="settings_scan_adv_sum">How many days in advance shall we check your contacts for their birthdays, so you have time to prepare your friend a surprise</string>
    <string name="settings_scan_adv_title">Days in Advance</string>
    <string name="settings_scan_precise_title">Precise Notifications</string>
    <string name="settings_scan_precise">Only one notification in advance</string>
    <string name="settings_list_preferences">Birthday List Settings</string>
    <string name="settings_accounts_preferences">Account Settings</string>
    <string name="settings_application_preferences">Application Behavior Settings</string>
    <string name="settings_list_input_sum">Days Until Birthday/Age/Name/Zodiac</string>
    <string name="settings_list_input_title">Sort By</string>
    <string name="settings_list_order_sum">Ascending or Descending</string>
    <string name="settings_list_order_title">Sort Order</string>
    <string name="settings_time_set">Set</string>
    <string name="settings_time_cancel">Cancel</string>
    <string name="settings_layout_preferences">Layout</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_battery_status">Allow to run in the background</string>
    <string name="settings_theme">Dark</string>
    <string name="settings_show_birthday_type_only">Display Birthday event type only</string>
    <string name="settings_hide_add_contact_fab">Hide button to add new birthday</string>
    <string name="settings_notify_favorites_only">Notify favorites only</string>
    <string name="settings_hide_contacts">Hide ignored contacts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alert_contats_dialog_title">Permission to Read Contacts needed</string>
    <string name="alert_contacts_dialog_msg">We need access to your contact list in order to fetch their birthdays</string>
    <string name="alert_permissions_allow">OK</string>
    <string name="alert_permissions_deny">Deny</string>

    <string name="array_order_next">Days until next birthday</string>
    <string name="array_order_age">Age</string>
    <string name="array_order_name">Name</string>
    <string name="array_order_sign">Sign</string>
    <string name="array_order_asc">Ascending</string>
    <string name="array_order_desc">Descending</string>
    <string name="exit_warning_msg">Press back again to exit</string>
    <string name="about_us_bt_changelog">Changelog</string>
    <string name="build" translatable="false">Build %1$d</string>
    <string name="emoji_heart" translatable="false">❤</string>
    <string name="emoji_block" translatable="false">⛔</string>
    <string name="emoji_today_party" translatable="false">🎉</string>
    <string name="emoji_tomorrow_party" translatable="false">🤩</string>
    <string name="undo">Undo</string>
    <string name="amount"># of contacts</string>

    <string name="about_info" tools:keep="@string/about_info">BirthDayDroid is an open-source project created to help you to remember your friends birthday.</string>
    <string name="about_help_title">You can help us :D</string>
    <string name="about_help_developer">Developer/Designer?</string>
    <string name="about_help_issues">Feature requests and/or bug reports?</string>
    <string name="about_help_languages">Support a new language?</string>
    <string name="about_help_coffee">Buy us a coffee :)</string>
    <string name="about_people_devel_code_title">Code</string>
    <string name="about_people_devel_title">Developers</string>
    <string name="about_people_devel_patches_title" translatable="false">Pull Requests</string>
    <string name="about_people_devel_contributors_title">Contributors</string>
    <string name="about_people_devel_translators_title">Translation</string>
    <string name="about_people_devel_translators_text">A bunch of nice people on Transifex</string>
    <string name="about_special_thanks">Special Thanks</string>
    <string name="about_libs">Libs (Thank you so much)</string>
    <string name="about_icons">Icons (Special Thanks)</string>
    <string name="accounts_enabled_title">Select Accounts</string>
    <string name="accounts_enabled_sum">Enable the use of specific accounts</string>
    <string name="accounts_title">Accounts</string>

    <string name="breaking_change_dialog_title">Important Update Notice</string>
    <string name="breaking_change_dialog_message_v46">The mechanism how times are saved has changed. Please check the notification time and correct it if needed.</string>

    <string name="statistic_action_switch_to_text_view">Switch to Text View</string>
    <string name="statistic_action_switch_to_diagram_view">Switch to Diagram View</string>

    <string name="statistic_action_zodiac_info">Information About Zodiacs</string>
    <string name="zodiac_info_title">Information About Zodiacs</string>
    <string name="zodiac_info_message">There are 12 zodiacs that are defined by 30° sectors of the ecliptic. All 12 sectors are a calendar, but it is not fully matching with our gregorian calendar. Therefore the border dates of the zodiacs can variate from year to year. Please keep this in mind, if you think there is a wrong calculated zodiac in this app.</string>
</resources>

