<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_birthday_list"
            android:icon="@drawable/ic_cake_white_24dp"
            android:title="@string/menu_birthday_list" />
    </group>

    <group
        android:id="@+id/group_statistics_text"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics_age_text"
            android:icon="@drawable/ic_poll_white_24dp"
            android:title="@string/menu_statistics_age" />
        <item
            android:id="@+id/nav_statistics_zodiac_text"
            android:icon="@drawable/ic_poll_white_24dp"
            android:title="@string/menu_statistics_zodiac" />
        <item
            android:id="@+id/nav_statistics_week_text"
            android:icon="@drawable/ic_poll_white_24dp"
            android:title="@string/menu_statistics_week" />
        <item
            android:id="@+id/nav_statistics_month_text"
            android:icon="@drawable/ic_poll_white_24dp"
            android:title="@string/menu_statistics_month" />
    </group>

    <group
        android:id="@+id/group_statistics_diagram"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics_age_diagram"
            android:icon="@drawable/ic_poll_white_24dp"
            android:title="@string/menu_statistics_age" />
        <item
            android:id="@+id/nav_statistics_zodiac_diagram"
            android:icon="@drawable/ic_poll_white_24dp"
            android:title="@string/menu_statistics_zodiac" />
        <item
            android:id="@+id/nav_statistics_week_diagram"
            android:icon="@drawable/ic_poll_white_24dp"
            android:title="@string/menu_statistics_week" />
        <item
            android:id="@+id/nav_statistics_month_diagram"
            android:icon="@drawable/ic_poll_white_24dp"
            android:title="@string/menu_statistics_month" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_comment_white_24dp"
            android:title="@string/menu_about" />
    </group>

</menu>
